--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
    ga('create', 'UA-88400382-2', 'auto');
    ga('send', 'pageview');
   </script>
+
+  <!-- ESRI styles and SDK used for map visualization -->
+  <link rel="stylesheet" href="https://s3-us-west-1.amazonaws.com/patterns.esri.com/files/calcite-web/1.0.1/css/calcite-web-dark.min.css">
+  <link rel="stylesheet" href="covenants/styles/main.css">
+  <link rel="stylesheet" href="https://js.arcgis.com/4.8/esri/themes/dark/main.css">
+  <script src="./covenants/app/dojo.js"></script>
+  <script src="https://js.arcgis.com/4.8/"></script>
+  <script>require(["Application/init"]);</script>
+
+
 </head>
 <body>
   <div class="wrapper-parallax">
@@ -127,11 +137,6 @@
               </li>
             </ul>
           </div>
-
-
-
-
-
         </div>
 
         <h3 class="main-title-lead">
@@ -174,42 +179,47 @@
     <div id="sub-header-content">
       <div class="content-width">
 
-        <!--modal map screen -->
         <div class="content-block-2" style="background: url(images/iframe-map-background.png) no-repeat #111;">
           <h3 class="flex-title">Our Map</h3>
-          <div id="carto_div">
-            <div id="carto_div2">
-              <div id="carto_screen" onclick="screen_test()">
-                <script>function screen_test() {
-                   document.getElementById("carto_screen").style.display = "none";
-                 }
-                </script>
+
+          <div id="map-container">
+            <div class="configurable-application--loading">
+              <div id="main-container">
+                <div id="view-container">
+                  <a id="logo" target="_blank" href="https://www.esri.com">
+                    <img src="./covenants/assets/esri-white.png" height="53"/>
+                  </a>
+                </div>
+                <div id="bottom-container">
+                  <div id="chart-node"></div>
+                </div>
+              </div>
+            </div>
+
+            <div id="title-panel" class="panel hide">
+              <div id="app-title" class="font-size-3"></div>
+            </div>
+
+            <div id="info-panel" class="panel hide">
+              <div class="block-group block-group-2-up">
+                <div class="block text-center spacer">
+                  <div id="year-node" class="text-blue font-size-7"></div>
+                  <div class="font-size--3">year</div>
+                </div>
+                <div class="block text-center">
+                  <div id="count-node" class="text-blue font-size-7"></div>
+                  <div class="font-size--3">total</div>
+                </div>
+              </div>
+              <div id="time-input-group" class="input-group leader-half">
+                <span class="input-group-button">
+                  <button id="play-pause-btn" class="btn-link font-size-3 icon-ui-play" title="Play / Pause"></button>
+                </span>
+                <input id="time-input" class="input-group-input btn-disabled" type="range" value="0">
               </div>
             </div>
           </div>
-          <div class="iframe-background">
-            <div style="margin-right: 5%; margin-left: 5%;">
-              <div style="float: right">
-                <button id="kevBtn"></button>
-              </div>
-            </div>
-            <!-- Modal Iframe -->
-            <div id="myModal" class="modal">
-              <div class="modal-content">
-                <span class="close">x</span>
-                <iframe width="100%" height="93%" frameborder="0" src="background-blank/index.html" name="search_iframe" id="iframe-modal"></iframe>
-              </div>
-            </div>
-            <!-- Main Page Iframe -->
-            <div class="iframe-box">
-              <div id="map-border" style="text-align: center;">
-                <!-- Desktop -->
-                <iframe src="https://www.mappingprejudice.org/timelapse-hennepin/index.html" id="myiframe" name="search_iframe" width="100%" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
-                <!-- Mobile -->
-                <iframe src="https://www.mappingprejudice.org/timelapse-mobile/index.html" id=myiframe-mobile name="search_iframe" width="100%" height="425" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
-              </div>
-            </div>
-          </div>
+
           <p class="img-sub-script">This interactive visualization shows the spread of racially-restrictive deeds across Minneapolis during the first half of the twentieth century.</p>
         </div>
 
