Disable scroll zoom, fix missing image

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
               <div id="kev-attribution">
                 <div id="attribution-text">
                   <div id="attribution-link-txt">
-                    <img class="copyright" src="../images/cc.png">
+                    <img class="copyright" src="images/cc.png">
                     <a href="http://kevinehrman.com" target="_blank" id="attribution-link-font">Kevin Ehrman</a></img>
                   </div>
                 </div>
