Updates based on feedback
- Custom basemap
- Fullscreen margins, animation, close button, icon
- Fix styling >2200px
- JS cleanup

--- a/index.html
+++ b/index.html
@@ -83,11 +83,7 @@
     <!-- Nav Buttons and Title Top Section -->
     <div class="top-section">
       <div class="top-section-text" id="map_hide">
-        <div>
-          <div class="banner-img">
-          </div>
-        </div>
-
+        <div class="banner-img"></div>
         <!-- Sticky Nav Bar Desktop -->
         <div class="top-sticky-nav-desktop">
           <div class="top-sticky-nav-container">
@@ -147,7 +143,7 @@
     </div>
 
 
-    <div class="content-block-2" style="background-color: #dbd9e200;">
+    <div class="content-block-2 content-width" style="background-color: #dbd9e200;">
       <div class="flex">
         <a id="link-box-1" href="about-us/index.html" class="hvr-fade">
           <h3 class="flex-title">about</h3>
@@ -178,14 +174,12 @@
     <!--Sub-header content -->
     <div id="sub-header-content">
       <div class="content-width">
-        <div class="content-block-2" style="background: url(images/iframe-map-background.png) no-repeat #111;">
+        <div id="map-section" class="content-block-2" style="background: url(images/iframe-map-background.png) no-repeat #111;">
           <h3 class="flex-title">Our Map</h3>
-
           <div id="fullscreen-background">
+            <span class="close">x</span>
             <div id="map">
-              <div id="fullscreen">
-
-              </div>
+              <div id="fullscreen"> </div>
               <div id="count-container">
                 <div id="counts">
                   <span>
@@ -235,7 +229,7 @@
       </div>
     </div>
   </div>
-  <footer>
+  <footer class="content-width">
     <div class="footer-contain">
       <div class="flex">
         <div class="footer-flex">
