--- a/Events/index.html
+++ b/Events/index.html
@@ -192,27 +192,6 @@
       <p class="media-title">Upcoming Events</p>
 
       <div class="events-block" style="border-bottom-width: 5px;">
-        <h3 class="events-title">‘DISPLACED’ EXHIBIT OPENING</h3>
-          <div class="events-flex">
-              <div class="date-box">
-                <p class="events-month">June</p>
-                <p class="events-date">11</p>
-                <p class="events-date">6:30p.m. - 8:00p.m.</p>
-              </div>
-              <div class="flex-div-3">
-                <p class="model-events-text">“Displaced” is a new installation at the Linden Hills Library that will explore the story of how southwest Minneapolis became entirely white during the first decades of the twentieth century. The exhibit opens on June 11th and is co-curated by Mapping Prejudice team members Denise Pike and Marguerite Mills. Please join librarians, curators and community members as we confront this history together.</p>
-              </div>
-              <div class="location-box">
-                <p class="model-events-text">Linden Hills Library<br>
-                  2900 W 43rd St<br>
-                  Minneapolis, MN 55410</p>
-                </p>
-                  <p class="model-events-text"><a href="https://hclib.bibliocommons.com/events/search/q=displaced/event/5ceeec5cf652522e003e7fd4">More Details</a></p>
-              </div>
-          </div>
-      </div>
-
-      <div class="events-block" style="border-bottom-width: 5px;">
         <h3 class="events-title">‘DISPLACED’ EXHIBIT</h3>
           <div class="events-flex">
               <div class="date-box">
@@ -228,7 +207,7 @@
                   2900 W 43rd St<br>
                   Minneapolis, MN 55410</p>
                 </p>
-                  <p class="model-events-text"><a href="https://hclib.bibliocommons.com/events/search/q=displaced/event/5ceeec5cf652522e003e7fd4">More Details</a></p>
+                  <p class="model-events-text"><a href="https://www.hclib.org/about/news/2019/June/housing-segregation>More Details</a></p>
               </div>
           </div>
       </div>
@@ -374,6 +353,27 @@
 
     <!-- Past Events -->
     <p class="media-title">Past Events</p>
+
+    <div class="events-block" style="border-bottom-width: 5px;">
+      <h3 class="events-title">‘DISPLACED’ EXHIBIT OPENING</h3>
+        <div class="events-flex">
+            <div class="date-box">
+              <p class="events-month">June</p>
+              <p class="events-date">11</p>
+              <p class="events-date">6:30p.m. - 8:00p.m.</p>
+            </div>
+            <div class="flex-div-3">
+              <p class="model-events-text">“Displaced” is a new installation at the Linden Hills Library that will explore the story of how southwest Minneapolis became entirely white during the first decades of the twentieth century. The exhibit opens on June 11th and is co-curated by Mapping Prejudice team members Denise Pike and Marguerite Mills. Please join librarians, curators and community members as we confront this history together.</p>
+            </div>
+            <div class="location-box">
+              <p class="model-events-text">Linden Hills Library<br>
+                2900 W 43rd St<br>
+                Minneapolis, MN 55410</p>
+              </p>
+                <p class="model-events-text"><a href="https://hclib.bibliocommons.com/events/search/q=displaced/event/5ceeec5cf652522e003e7fd4">More Details</a></p>
+            </div>
+        </div>
+    </div>
 
     <div class="events-block" style="border-bottom-width: 5px;">
       <h3 class="events-title">Mapping Prejudice: Transcribing the Truth</h3>
