--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
           <a id="link-box-3" class="hvr-fade" target="blank" href="Events/index.html">
             <h3 class="flex-title">events</h3>
             <img class="press-imgs" src="images/displaced.png" alt="Article Link">
-            <p class="flex-para"> <b>‘DISPLACED’ EXHIBIT OPENING</b><br>
+            <p class="flex-para"> <b>‘DISPLACED’ EXHIBIT</b><br>
               “Displaced” is a new installation at the Linden Hills Library that will explore the story of how southwest Minneapolis became entirely white during the first decades of the twentieth century. The exhibit opens on June 11th and is co-curated by Mapping Prejudice team members Denise Pike and Marguerite Mills. Please join librarians, curators and community members as we confront this history together.<br>
-              <b>Tuesday, June 11th, 2019</b>
+              <b>June 11th through July 10th</b>
             </p>
             <div class="flex-btn-div">
               <p class="flex-btn">Learn More</p>
