--- a/Events/index.html
+++ b/Events/index.html
@@ -207,7 +207,7 @@
                   2900 W 43rd St<br>
                   Minneapolis, MN 55410</p>
                 </p>
-                  <p class="model-events-text"><a href="https://www.hclib.org/about/news/2019/June/housing-segregation>More Details</a></p>
+                  <p class="model-events-text"><a href="https://www.hclib.org/about/news/2019/June/housing-segregation">More Details</a></p>
               </div>
           </div>
       </div>
