--- a/Events/index.html
+++ b/Events/index.html
@@ -192,7 +192,7 @@
       <p class="media-title">Upcoming Events</p>
 
       <div class="events-block" style="border-bottom-width: 5px;">
-        <h3 class="events-title">‘DISPLACED’ EXHIBIT</h3>
+        <h3 class="events-title">‘DISPLACED’ Exhibit</h3>
           <div class="events-flex">
               <div class="date-box">
                 <p class="events-month">NOW <br><br> </p>
